# cpex-plugins

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  MAINTENANCE.md  Makefile  README.md  SECURITY.md  TESTING.md  deny.toml  pyproject.toml
.cargo/: mutants.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci-detect-secrets.yaml  ci-install-built-wheel.yaml  ci-plugin-catalog.yaml  ci-rust-python-package.yaml  ci-scaffold-generator.yaml  plugin-maintenance.yaml  pypi-rate-limiter.yaml  release-rust-python-package.yaml
.memsearch/memory/: 2026-06-29.md  2026-06-30.md  2026-07-01.md
crates/framework_bridge/: Cargo.toml
crates/framework_bridge/src/: lib.rs
experiments/secrets_detection_rust/: Cargo.toml  README.md
experiments/secrets_detection_rust/examples/: manual_probe.rs
experiments/secrets_detection_rust/smoke/crate_consumer/: Cargo.toml  README.md
experiments/secrets_detection_rust/smoke/crate_consumer/src/: main.rs
experiments/secrets_detection_rust/src/: config.rs  lib.rs  patterns.rs  scanner.rs
experiments/secrets_detection_rust/tests/: plugin_manager.rs
plugins/python/content_moderation/: Makefile  TESTING.md  plugin-manifest.yaml  pyproject.toml
plugins/python/content_moderation/cpex_content_moderation/: __init__.py  content_moderation.py
plugins/python/content_moderation/tests/: __init__.py  conftest.py  test_content_moderation.py
plugins/rust/python-package/encoded_exfil_detection/: Cargo.toml  Makefile  README.md  pyproject.toml
plugins/rust/python-package/encoded_exfil_detection/cpex_encoded_exfil_detection/: __init__.py  __init__.pyi  encoded_exfil_detection.py  plugin-manifest.yaml
plugins/rust/python-package/encoded_exfil_detection/src/: lib.rs
plugins/rust/python-package/encoded_exfil_detection/tests/: test_plugin.py
plugins/rust/python-package/encoded_exfil_detection/tests/integration/: test_encoded_exfil.py
plugins/rust/python-package/encoded_exfil_detection/tests/mcpgateway_mock/plugins/: framework.py
plugins/rust/python-package/rate_limiter/: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
plugins/rust/python-package/rate_limiter/.tls-smoke/: README.md  gen-certs.sh  run-redis.sh  smoke.py
plugins/rust/python-package/rate_limiter/cpex_rate_limiter/: plugin-manifest.yaml  rate_limiter.py
plugins/rust/python-package/rate_limiter/cpex_rate_limiter/rate_limiter_rust/: __init__.pyi
plugins/rust/python-package/rate_limiter/src/: config.rs  engine.rs  lib.rs  plugin.rs  redis_backend.rs  types.rs
plugins/rust/python-package/rate_limiter/tests/integration/: test_rate_limiter.py
plugins/rust/python-package/rate_limiter/tests/mcpgateway_mock/plugins/: framework.py
plugins/rust/python-package/regex_filter/: Cargo.toml  Makefile  README.md  pyproject.toml
plugins/rust/python-package/regex_filter/benches/: regex_filter.rs
plugins/rust/python-package/regex_filter/cpex_regex_filter/: __init__.py  __init__.pyi  plugin-manifest.yaml  regex_filter.py
plugins/rust/python-package/regex_filter/cpex_regex_filter/regex_filter_rust/: __init__.pyi
plugins/rust/python-package/regex_filter/src/: lib.rs  plugin.rs
plugins/rust/python-package/regex_filter/tests/: conftest.py  test_plugin.py
plugins/rust/python-package/regex_filter/tests/mcpgateway_mock/plugins/: framework.py
plugins/rust/python-package/retry_with_backoff/: Cargo.toml  Makefile  README.md  pyproject.toml
plugins/rust/python-package/retry_with_backoff/cpex_retry_with_backoff/: __init__.py  plugin-manifest.yaml  retry_with_backoff.py
plugins/rust/python-package/retry_with_backoff/cpex_retry_with_backoff/retry_with_backoff_rust/: __init__.pyi
plugins/rust/python-package/retry_with_backoff/src/: config.rs  delay.rs  lib.rs  plugin.rs  state.rs
plugins/rust/python-package/retry_with_backoff/tests/: test_plugin.py
plugins/rust/python-package/secrets_detection/: Cargo.toml  Makefile  README.md  pyproject.toml
plugins/rust/python-package/secrets_detection/cpex_secrets_detection/: plugin-manifest.yaml  secrets_detection.py
plugins/rust/python-package/secrets_detection/cpex_secrets_detection/secrets_detection_rust/: __init__.pyi
plugins/rust/python-package/secrets_detection/src/: config.rs  lib.rs  object_model.rs  patterns.rs  plugin.rs  scanner.rs
plugins/rust/python-package/secrets_detection/src/scanner/: cycle_rewrite.rs  python_scan.rs  text_scan.rs  value_conversion.rs
plugins/rust/python-package/secrets_detection/src/scanner/python_scan/: tests.rs
plugins/rust/python-package/secrets_detection/tests/: test_plugin.py
plugins/rust/python-package/sql_sanitizer/: Cargo.toml  Makefile  README.md  pyproject.toml
plugins/rust/python-package/sql_sanitizer/benches/: sql_sanitizer.rs
plugins/rust/python-package/sql_sanitizer/cpex_sql_sanitizer/: __init__.py  __init__.pyi  plugin-manifest.yaml  sql_sanitizer.py
plugins/rust/python-package/sql_sanitizer/cpex_sql_sanitizer/sql_sanitizer_rust/: __init__.pyi
plugins/rust/python-package/sql_sanitizer/src/: comments.rs  config.rs  issues.rs  lib.rs  plugin.rs  scanner.rs
plugins/rust/python-package/url_reputation/: Cargo.toml  Makefile  README.md  compare_performance.py  pyproject.toml
plugins/rust/python-package/url_reputation/cpex_url_reputation/: plugin-manifest.yaml  url_reputation.py
plugins/rust/python-package/url_reputation/cpex_url_reputation/url_reputation_rust/: __init__.py
plugins/rust/python-package/url_reputation/tests/: test_plugin.py  test_url_reputation.py
plugins/tests/: conftest.py
plugins/tests/pii_filter/: conftest.py  (+1 more)
rate_limiter/: Cargo.toml  Makefile  README.md  pyproject.toml
rate_limiter/cpex_rate_limiter/: __init__.py  __init__.pyi  plugin-manifest.yaml  rate_limiter.py
rate_limiter/src/: engine.rs  lib.rs
rate_limiter/tests/: test_config.py  test_extract_user_identity.py  test_parse_rate.py  test_plugin.py
tests/: test_install_built_wheel.py  test_plugin_catalog.py
tools/: install_built_wheel.py  plugin_catalog.py  scaffold_plugin.py
(+59 files in other folders)
