[workspace]
members = [
    "crates/framework_bridge",
    "plugins/rust/python-package/encoded_exfil_detection",
    "plugins/rust/python-package/pii_filter",
    "plugins/rust/python-package/rate_limiter",
    "plugins/rust/python-package/retry_with_backoff",
    "plugins/rust/python-package/url_reputation",
    "plugins/rust/python-package/secrets_detection",
]
resolver = "3"

[workspace.package]
authors = ["ContextForge Contributors"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/IBM/cpex-plugins"

[workspace.dependencies]
# Keep dependencies here only when at least two workspace members inherit them.
cpex_framework_bridge = { path = "crates/framework_bridge" }
criterion = { version = "0.8.2", features = ["html_reports"] }
log = "0.4.29"
mutants = "0.0.4"
pyo3 = { version = "0.29.0", features = ["abi3-py311"] }
pyo3-log = "0.13.4"
pyo3-stub-gen = "0.23.0"
regex = "1.12.3"
serde_json = "1.0.149"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
debug = true
