[project]
name = "cpex-plugins"
version = "0.0.0"
requires-python = ">=3.11"

[tool.uv]
package = false
exclude-newer = "10 days"
constraint-dependencies = [
    "cpex>=0.1.0,<0.2",
    "maturin>=1.13.3,<2.0",
    "pydantic>=2.13.4,<3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "PyYAML>=6.0.3",
    "redis>=7.4.0",
]
build-constraint-dependencies = [
    "maturin>=1.13.3,<2.0",
]

[tool.uv.workspace]
members = [
    "plugins/rust/python-package/encoded_exfil_detection",
    "plugins/rust/python-package/pii_filter",
    "plugins/rust/python-package/rate_limiter",
    "plugins/rust/python-package/retry_with_backoff",
    "plugins/rust/python-package/secrets_detection",
    "plugins/rust/python-package/url_reputation",
]
