[package]
name = "cpex_framework_bridge"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared PyO3 framework object bridge helpers for CPEX Rust plugins"

[lib]
name = "cpex_framework_bridge"
path = "src/lib.rs"

[dependencies]
pyo3 = { workspace = true }
