[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpex-content-moderation"
version = "1.0.0"
description = "Advanced content moderation plugin using multiple AI providers (IBM Watson, IBM Granite Guardian, OpenAI, Azure, AWS)"
authors = [{ name = "ContextForge Contributors" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2,<3",
    "httpx>=0.24",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
keywords = ["cpex", "plugin", "content-moderation", "ai-safety", "watson", "openai", "azure"]

[project.urls]
Repository = "https://github.com/IBM/cpex-plugins"
Homepage = "https://github.com/IBM/cpex-plugins"

[project.entry-points."cpex.plugins"]
content_moderation = "cpex_content_moderation.content_moderation:ContentModerationPlugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["cpex_content_moderation*"]

[tool.ruff]
line-length = 200

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "black>=23.0",
    "isort>=5.12",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "build>=1.0",
    "twine>=4.0",
]
