[package]
name = "rate_limiter"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance rate limiter engine for MCP Gateway"

[lib]
name = "rate_limiter_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
cpex_framework_bridge = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
pyo3-stub-gen = { workspace = true }
pyo3-log = { workspace = true }
mutants = "0.0.4"
parking_lot = "0.12.5"
thiserror = { workspace = true }
# EXPERIMENT (native-tls): use the OpenSSL-backed TLS path instead of rustls.
# rustls only completes TLS 1.3 handshakes against some managed Redis — AWS
# ElastiCache negotiating TLS 1.2 in particular fails — whereas OpenSSL /
# native-tls handles TLS 1.2 fine (matching redis-py). CA/mTLS PEMs are still
# passed via redis::TlsCertificates; native-tls parses them.
redis = { version = "1.2.1", features = ["aio", "tokio-comp", "tls-native-tls", "tokio-native-tls-comp"] }
tokio = { workspace = true }

# native-tls -> openssl-sys on Linux. `vendored` compiles OpenSSL from source
# and statically links it so the manylinux wheel is self-contained (no
# dependency on the host image's OpenSSL version). macOS uses Security.framework.
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
rcgen = { version = "0.12", default-features = false, features = ["ring", "pem"] }
criterion = { workspace = true }

[[bench]]
name = "rate_limiter"
harness = false
