[package]
name = "rate_limiter"
version = "0.1.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance rate limiter engine for MCP Gateway"

[lib]
name = "rate_limiter_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
required-features = ["stub-gen"]

[features]
default = []
stub-gen = ["dep:pyo3-stub-gen"]

[dependencies]
cpex_framework_bridge = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
pyo3-stub-gen = { workspace = true, optional = true }
pyo3-log = { workspace = true }
mutants = "0.0.4"
parking_lot = "0.12.5"
thiserror = { workspace = true }
redis = { version = "1.2.1", features = ["aio", "tokio-comp", "tls-rustls", "tls-rustls-insecure", "tokio-rustls-comp"] }
# Enable default features (includes tls12 for TLS 1.2 support) plus the ring provider.
rustls = { version = "0.23.40", features = ["ring"] }
rustls-pki-types = "1.14"
tokio = { workspace = true }

[dev-dependencies]
rcgen = { version = "0.12", default-features = false, features = ["ring", "pem"] }
criterion = { workspace = true }

[[bench]]
name = "rate_limiter"
harness = false
