[package]
name = "regex_filter"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust-backed regex search and replace plugin for MCP Gateway"

[lib]
name = "regex_filter_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
cpex_framework_bridge = { workspace = true }
log = { workspace = true }
pyo3 = { workspace = true }
pyo3-log = { workspace = true }
pyo3-stub-gen = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "regex_filter"
harness = false
