[package]
name = "retry_with_backoff"
version = "0.3.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance retry policy engine for MCP Gateway with exponential backoff, jitter, per-tool overrides, and retry metadata"

[lib]
name = "retry_with_backoff_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"
required-features = ["stub-gen"]

[features]
default = []
stub-gen = ["dep:pyo3-stub-gen"]

[dependencies]
cpex_framework_bridge = { workspace = true }
log.workspace = true
# mutants must be a regular (non-dev) dependency because #[mutants::skip] is
# used in non-test code; moving it to dev-dependencies would break release builds.
mutants = "0.0.4"
pyo3.workspace = true
pyo3-log.workspace = true
pyo3-stub-gen = { workspace = true, optional = true }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
