[build-system]
requires = ["maturin>=1.13.3,<2.0"]
build-backend = "maturin"

[project]
name = "cpex-url-reputation"
dynamic = ["version"]
description = "High-performance URL reputation and phishing detection for MCP Gateway"
authors = [{ name = "ContextForge Contributors" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cpex>=0.1.0,<0.2",
    "pydantic>=2.13.4,<3",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.entry-points."cpex.plugins"]
url_reputation = "cpex_url_reputation.url_reputation:URLReputationPlugin"

[tool.maturin]
module-name = "cpex_url_reputation.url_reputation_rust"
python-source = "."
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.13.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pydantic>=2.13.4",
]
